--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Students List</title>
   </head>
   <body>
   <!-- Write your code here -->
+  <!-- <h1 class="swag">MEOW</h1> -->
 
   <!-- Import Student List Script -->
   <script type="text/javascript" src="studentsList.js">
