--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Students List</title>
-  </head>
-  <body>
-  <!-- Write your code here -->
-  <!-- <h1 class="swag">MEOW</h1> -->
+</head>
 
-  <!-- Import Student List Script -->
-  <script type="text/javascript" src="studentsList.js">
+<body>
+    <!-- Write your code here -->
+    <h1 class="swag">MEOW</h1>
 
-  </script>
+    <table id = "students">
 
-  </body>
+    </table>
+    <!-- Import Student List Script -->
+    <script type="text/javascript" src="studentsList.js">
+    </script>
+
+</body>
+
 </html>
